<resources>
	<string name="app_name" translatable="false">Eventbox</string>
	<string name="events">Events</string>
	<string name="profile">Profile</string>
	<string name="likes">Likes</string>
	<string name="home">Home</string>
	<string name="news">News</string>
	<string name="messages">Messages</string>
	<string name="location_hint">Enter a location</string>
	<string name="reset_password_message">Reset password successfully, Please log in to continue</string>
	<string name="under_construction">Page under construction</string>
	<string name="welcome_message">Welcome to eventbox</string>
	<string name="welcome_message_interest">Please, define your interests to see what events match better with it</string>
	<string name="welcome_button_message">Prêts ? c\'est parti !</string>
	<string name="no_message_yet">You have no message</string>
	<string name="tab_favorite">Favories</string>
	<string name="tab_join">J\'y participe</string>
	<string name="tab_my_event">Mes events</string>
	<string name="no_news_yet">There is no news yet</string>
	<string name="fetch_news_error_message">Error fetching news !</string>
	<string name="error_fetching_news">We\'re having difficulty fetching news. Try again later.</string>
	<string name="news_type_nanterre_presse">NANTERRE PRESSE</string>
	<string name="no_interested_event">Find an event to join !</string>
	<string name="remember_interested">Remember to shortlist the events you love so you don\'t miss out!</string>
	<string name="no_created_event">No event created yet !</string>
	<string name="add_event">Add event</string>
	<string name="btn_join">Participer</string>
	<string name="report_event">Report Event</string>
	<string name="open_external_event_url">Open External Event URL</string>
	<string name="about">About</string>
	<string name="see_more">See more</string>
	<string name="see_less">See less</string>
	<string name="event_host_details">Event host details</string>
	<string name="organizer">Organizer</string>
	<string name="location">Location</string>
	<string name="track_required">Track *</string>
	<string name="whats_good">What\'s good in</string>
	<string name="where">Where?</string>
	<string name="no_internet_message">We\'re having difficulty connecting to the server. Check your connection or try again later.</string>
	<string name="error_fetching_events">We\'re having difficulty fetching event. Try again later.</string>
	<string name="tickets_sold_out">Sorry, All tickets for this event have been sold out!</string>
	<string name="retry">RETRY</string>
	<string name="more_like_this">More like this</string>
	<string name="favorite_event">Favorite Event</string>
	<string name="refund_Policy">Refund Policy</string>
	<string name="no_events_message">Sorry, there are no events available</string>
	<string name="skip">Skip</string>
	<string name="enter_location">Enter location</string>
	<string name="choose_preferred_location_message">Please choose your preferred location</string>
	<string name="already_registered_message">You\'re in it to win it</string>
	<string name="see_your_ticket">See your ticket</string>
	<plurals name="events_number">
		<item quantity="zero">No events</item>
		<item quantity="one">%1$s event</item>
		<item quantity="other">%1$s events</item>
	</plurals>
	<plurals name="news_number">
		<item quantity="zero">No news</item>
		<item quantity="other">%1$s news</item>
	</plurals>
	<string name="search">Search</string>
	<string name="search_hint">Search for. . .</string>
	<string name="go_out">I want to go out</string>
	<string name="anywhere">Anywhere</string>
	<string name="anytime">Anytime</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="weekend">This weekend</string>
	<string name="month">In the next month</string>
	<string name="what_time">What time works?</string>
	<string name="pick_date">Pick a date...</string>
	<string name="no_search_results">Hmmm, we\'\re not getting\nany results. Our bad - try\nanother search</string>
	<string name="event_details">Event details</string>
	<string name="download_ticket">Download Ticket</string>
	<string name="see_maps">See maps</string>
	<string name="in">In</string>
	<string name="logout">Log out</string>
	<string name="settings">Settings</string>
	<string name="login">Connexion</string>
	<string name="forgot_password">Mot de passe oublié</string>
	<string name="no_account">Nouveau ? créer un compte</string>
	<string name="email_sent_message">We just sent you an email with a link to reset\nyour password </string>
	<string name="email_sent_alert">Check your email!</string>
	<string name="sign_up">S\'inscrire</string>
	<string name="password">Mot de passe</string>
	<string name="manage_events">Manage Events</string>
	<string name="edit_profile">Edit Profile</string>
	<string name="ticket_issues">Ticket Issues</string>
	<string name="ticket_issues_url" translatable="false">https://support.eventbox.com</string>
	<string name="confirm_password">Confirmation mot de passe</string>
	<string name="first_name_optional">Prénom (Optionel)</string>
	<string name="last_name_optional">Nom (Optionel)</string>
	<string name="details_of_the_user">A propos de vous</string>
	<string name="welcome_back">Bon retour !</string>
	<string name="update">Mettre à jour</string>
	<string name="profile_photo">Photo de Profil</string>
	<string name="verified">Verifié</string>
	<string name="not_verified">Account not verified. Click to verify</string>
	<string name="verification_error_message">Error in verifying email</string>
	<string name="verify_your_profile">Please verify your email to buy free tickets</string>
	<string name="eventbox_logo" translatable="false">eventbox</string>
	<string name="starts_on">Starts On :&#160;</string>
	<string name="ends_on">Ends On :&#160;</string>
	<string name="start_time">Start Time :&#160;</string>
	<string name="end_time">End Time :&#160;</string>
	<string name="event_link">Event Link :&#160;</string>
	<string name="event_description">Event Description :&#160;</string>
	<string name="event_name">Event Name :&#160;</string>
	<string name="event_cat_one">Event Category :&#160;</string>
	<string name="event_cat_two">Second Category (Optional) :&#160;</string>
	<string name="event_location">Event Location :&#160;</string>
	<string name="event_privacy">Visibilité :&#160;</string>
	<string name="share">Share</string>
	<string name="add_to_calendar">Add to Calendar</string>
	<string name="tickets">Tickets</string>
	<string name="register">Register</string>
	<string name="ticket_name">Ticket Name</string>
	<string name="price">Price</string>
	<string name="qty">Qty</string>
	<string name="error_fetching_discount_code">Error fetching discount code</string>
	<string name="apply_discount_code">Apply discount code</string>
	<string name="apply">Apply</string>
	<string name="invalid_discount_code">Invalid discount code</string>
	<string name="discount_code_applied">Discount code applied</string>
	<string name="your_info">Your Info</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="email">Email</string>
	<string name="item">Item</string>
	<string name="subtotal">Subtotal</string>
	<string name="view">(view)</string>
	<string name="hide">(hide)</string>
	<string name="no_tickets_message">Invalid Quantity. Please enter a quantity of 1 or more</string>
	<string name="no_internet_connection_message">No internet connection!</string>
	<string name="term_and_conditions">Please accept the terms and conditions!</string>
	<string name="invalid_email_address_message">Invalid email address!</string>
	<string name="invalid_card_data_message">Invalid card data</string>
	<string name="invalid_card_number_message">Invalid card number</string>
	<string name="whoops">Whoops!</string>
	<string name="ok">ok</string>
	<string name="view_ticket">View</string>
	<string name="no_ticket_message">Not seeing your tickets? Learn more about how to find them.</string>
	<string name="no_past_tickets">No past tickets.</string>
	<string name="past_tickets">Past Tickets</string>
	<string name="past">Past ></string>
	<string name="find_my_tickets">Find my tickets</string>
	<string name="no_tickets_available">No tickets available!</string>
	<string name="ticket_details">Ticket Details</string>
	<string name="ticket_timeout_message">You have exceeded the time limit and your reservation has been released.\n\nThe purpose of this time limit is to ensure that registration is available to as many people as possible. We apologize for the inconvenience.</string>
	<string name="ticket_timeout_info_message">After %1$s minutes, the reservation we are holding will be released.</string>
	<string name="cancel_order">Cancel Order</string>
	<string name="cancel_order_message">Are you sure to cancel this order?</string>
	<string name="card_number">Card Number</string>
	<string name="expiration_date">Expiration Date</string>
	<string name="cvc" translatable="false">CVC</string>
	<string name="postal_code">Postal Code</string>
	<string name="payment_info">Payment Info</string>
	<string name="payment">Payment</string>
	<string name="not_you">Not you? </string>
	<string name="sign_out">Sign out</string>
	<string name="all_fees">All fees included in price</string>
	<string name="on_site">On Site</string>
	<string name="bank_transfer">Telegraphic Transfer/Bank Transfer</string>
	<string name="cheque">Cheque</string>
	<string name="paypal_payment_not_available">Paypal payment is not available in the app yet!</string>
	<string name="order_completed">ORDER COMPLETED</string>
	<string name="add">+ ADD</string>
	<string name="invite">INVITE</string>
	<string name="name">Name</string>
	<string name="event">Event</string>
	<string name="date">Date</string>
	<string name="order_identifier">Order Identifier</string>
	<string name="event_summary">Event Summary</string>
	<string name="organizer_preview" translatable="false">Mario</string>
	<string name="event_summary_preview">Very nice</string>
	<string name="order_identifier_preview" translatable="false">3456789</string>
	<string name="location_preview" translatable="false">Singapore</string>
	<string name="date_preview" translatable="false">Thu,June 14</string>
	<string name="event_preview" translatable="false">Eventbox summit</string>
	<string name="name_preview" translatable="false">Rivel babin</string>
	<string name="email_preview" translatable="false">popenet2@gmail.com</string>
	<string name="checkin_status">Check-in status</string>
	<string name="checked_in">Checked In</string>
	<string name="not_checked_in">Not Checked In</string>
	<string name="not_available">Not available</string>
	<string name="check_in_times">Check-in times</string>
	<string name="checked_out">Checked out</string>
	<string name="version_settings">Version</string>
	<string name="key_version">version</string>
	<string name="key_about">about</string>
	<string name="key_rating">rating</string>
	<string name="key_account">account</string>
	<string name="rating_settings">Rate Us</string>
	<string name="app_name_capital" translatable="false">Eventbox Android</string>
	<string name="key_acknowledgements" translatable="false">key_acknowledgements</string>
	<string name="key_profile">profile</string>
	<string name="logged_in_account">Account</string>
	<string name="key_timezone_switch" translatable="false">timeZoneSwitch</string>
	<string name="timeZone_title">Use local timezone</string>
	<string name="timeZone_summary">Event\'s timezone is used when disabled.</string>
	<string name="key_change_password">changePassword</string>
	<string name="title_change_password">Change Password</string>
	<string name="change">Change</string>
	<string name="old_password">Old Password</string>
	<string name="phone">Phone</string>
	<string name="billing_address">Billing Address</string>
	<string name="gender">Gender</string>
	<string name="address">Address</string>
	<string name="city">City</string>
</resources>