<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/eventMainFragment"
        android:icon="@drawable/ic_baseline_event"
        android:title="@string/events" />

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_message"
        android:title="@string/messages" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    
</menu>
