<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white_cct"
        app:titleTextColor="@color/white"
        app:title="@string/add_event"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="@dimen/layout_margin_none"
                    android:layout_height="@dimen/layout_margin_none"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:contentDescription="@string/add_event"
                    app:srcCompat="@drawable/header" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/eventImageFab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fabSize="mini"
                        android:layout_margin="@dimen/layout_margin_large"
                        app:layout_constraintRight_toRightOf="@id/eventImage"
                        app:layout_constraintBottom_toBottomOf="@id/eventImage"
                        app:srcCompat="@drawable/ic_edit"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:hint="@string/event_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:hint="@string/event_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_large"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_medium"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryOneLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="@dimen/layout_margin_none"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/event_cat_one">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/categoryOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryTwoLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="@dimen/layout_margin_none"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_small"
                    android:layout_weight="1"
                    android:hint="@string/event_cat_two">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/categoryTow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_event"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
